Added main CSS file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="/node_modules/bootstrap/dist/css/bootstrap.css"
       rel="stylesheet"
     />
+    <link href="src/content/css/site.css" rel="stylesheet" />
 
     <!--Module loader-->
     <script src="/node_modules/systemjs/dist/system.src.js"></script>
