--- a/src/controllers/edit-reservation/edit-reservation.controller.html
+++ b/src/controllers/edit-reservation/edit-reservation.controller.html
@@ -1,3 +1,3 @@
 <h2>Celebrity Cruises - Edit Reservation</h2>
 
-<trip-info></trip-info>
+<trip-info read-only="false" trip-info="tripInfo"></trip-info>
