Find reservation controller

--- a/src/controllers/find-reservation/find-reservation.controller.html
+++ b/src/controllers/find-reservation/find-reservation.controller.html
@@ -1,1 +1,3 @@
-<p>Find reservation controller</p>
+<h2>Celebrity Cruises - Find Reservation</h2>
+
+<trip-info read-only="true" trip-info="tripInfo"></trip-info>
